@@ -1,31 +1,39 @@
 package org.opt4j.core.genotype;
 
-import static org.junit.Assert.assertEquals;
+
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.util.ArrayList;
 import java.util.List;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+
+
 
 public class IntegerBoundsTest {
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void differentSizeTest() {
-		List<Integer> lowerBounds = new ArrayList<>();
-		lowerBounds.add(-1);
-		lowerBounds.add(0);
-		lowerBounds.add(1);
-		List<Integer> upperBounds = new ArrayList<>();
-		upperBounds.add(0);
-		upperBounds.add(1);
-		new IntegerBounds(lowerBounds, upperBounds);
+		assertThrows(IllegalArgumentException.class, () -> {
+			List<Integer> lowerBounds = new ArrayList<>();
+			lowerBounds.add(-1);
+			lowerBounds.add(0);
+			lowerBounds.add(1);
+			List<Integer> upperBounds = new ArrayList<>();
+			upperBounds.add(0);
+			upperBounds.add(1);
+			new IntegerBounds(lowerBounds, upperBounds);
+		});	
 	}
 
-	@Test(expected = IllegalArgumentException.class)
+	@Test
 	public void differentLengthTest() {
-		int[] lowerBounds = { -1, 0, 1 };
-		int[] upperBounds = { 0, 1 };
-		new IntegerBounds(lowerBounds, upperBounds);
+		assertThrows(IllegalArgumentException.class, () -> {
+			int[] lowerBounds = { -1, 0, 1 };
+			int[] upperBounds = { 0, 1 };
+			new IntegerBounds(lowerBounds, upperBounds);
+		});
 	}
 
 	@Test
@@ -33,12 +41,12 @@ public class IntegerBoundsTest {
 		int[] lowerBounds = { -1, 0, 1 };
 		int[] upperBounds = { 0, 1, 2 };
 		IntegerBounds bounds = new IntegerBounds(lowerBounds, upperBounds);
-		assertEquals(new Long(-1), new Long(bounds.getLowerBound(0)));
-		assertEquals(new Long(0), new Long(bounds.getLowerBound(1)));
-		assertEquals(new Long(1), new Long(bounds.getLowerBound(2)));
-		assertEquals(new Long(0), new Long(bounds.getUpperBound(0)));
-		assertEquals(new Long(1), new Long(bounds.getUpperBound(1)));
-		assertEquals(new Long(2), new Long(bounds.getUpperBound(2)));
+		Assertions.assertEquals(Long.valueOf(-1), Long.valueOf(bounds.getLowerBound(0)));
+		Assertions.assertEquals(Long.valueOf(0), Long.valueOf(bounds.getLowerBound(1)));
+		Assertions.assertEquals(Long.valueOf(1), Long.valueOf(bounds.getLowerBound(2)));
+		Assertions.assertEquals(Long.valueOf(0), Long.valueOf(bounds.getUpperBound(0)));
+		Assertions.assertEquals(Long.valueOf(1), Long.valueOf(bounds.getUpperBound(1)));
+		Assertions.assertEquals(Long.valueOf(2), Long.valueOf(bounds.getUpperBound(2)));
 	}
 
 	@Test
@@ -52,11 +60,11 @@ public class IntegerBoundsTest {
 		upperBounds.add(1);
 		upperBounds.add(2);
 		IntegerBounds bounds = new IntegerBounds(lowerBounds, upperBounds);
-		assertEquals(new Long(-1), new Long(bounds.getLowerBound(0)));
-		assertEquals(new Long(0), new Long(bounds.getLowerBound(1)));
-		assertEquals(new Long(1), new Long(bounds.getLowerBound(2)));
-		assertEquals(new Long(0), new Long(bounds.getUpperBound(0)));
-		assertEquals(new Long(1), new Long(bounds.getUpperBound(1)));
-		assertEquals(new Long(2), new Long(bounds.getUpperBound(2)));
+		Assertions.assertEquals(Long.valueOf(-1), Long.valueOf(bounds.getLowerBound(0)));
+		Assertions.assertEquals(Long.valueOf(0), Long.valueOf(bounds.getLowerBound(1)));
+		Assertions.assertEquals(Long.valueOf(1), Long.valueOf(bounds.getLowerBound(2)));
+		Assertions.assertEquals(Long.valueOf(0), Long.valueOf(bounds.getUpperBound(0)));
+		Assertions.assertEquals(Long.valueOf(1), Long.valueOf(bounds.getUpperBound(1)));
+		Assertions.assertEquals(Long.valueOf(2), Long.valueOf(bounds.getUpperBound(2)));
 	}
 }
